test/testcase/version_1/pass/playlist-inverted-order.xspf
<?xml version="1.0" encoding="UTF-8"?>
<!-- Applications need to support arbitrary
     order of the child elements of playlist -->
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList />
	<extension application="http://example.com/" />
	<meta rel="http://example.com/">value</meta>
	<link rel="http://example.com/">http://example.com/</link>
	<attribution />
	<license>http://example.com/</license>
	<date>2005-01-08T17:10:47-05:00</date>
	<image>http://example.com/</image>
	<identifier>http://example.com/</identifier>
	<location>http://example.com/</location>
	<info>http://example.com/</info>
	<annotation>some text</annotation>
	<creator>some text</creator>
	<title>some text</title>
	<link rel="http://example.com/">http://example.com/</link>
	<meta rel="http://example.com/">value</meta>
	<extension application="http://example.com/" />
</playlist>
