test/testcase/version_1/fail/playlist-extension-application-missing.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<extension xml:base="foo"></extension>
	<trackList />
</playlist>

